[package]
name = "robsim"
version = "0.1.0"
edition = "2024"
default-run = "robsim"

[features]
default = []
editor = []

[dependencies]
bevy = { version = "0.18.1", features = ["debug"] }
bevy_ecs_ldtk = "0.14.0"
rand = "0.10.1"
random_name_generator = "0.3.6"
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
