[package]
name = "robsim"
version = "0.1.0"
edition = "2024"
default-run = "robsim"

[features]
default = []
editor = []

[dependencies]
bevy = { version = "0.18.1", features = ["debug"] }
bevy_ecs_ldtk = "0.14.0"
bevy-networker-multiplayer = "0.1.3"
better_bevy_menus = "0.1.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
wasm-bindgen = "0.2"
